# adm-guara

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py  crm.py  dashboard.py  projects.py  router.py  tasks.py  users.py
backend/src/core/: __init__.py  dependencies.py  exceptions.py  middleware.py  permissions.py  redis.py  security.py
backend/src/models/: __init__.py  base.py  crm.py  notification.py  project.py  task.py  tenant.py  user.py
backend/src/repositories/: __init__.py  base.py  crm_repository.py  project_repository.py  task_repository.py  user_repository.py
backend/src/schemas/: __init__.py  auth.py  common.py  crm.py  project.py  task.py  tenant.py  user.py
backend/src/services/: __init__.py  auth_service.py  crm_service.py  dashboard_service.py  project_service.py  task_service.py
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: dashboard-layout-client.tsx  layout.tsx
frontend/src/hooks/: index.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/providers/: auth-provider.tsx
frontend/src/types/: api.ts
(+14 files in other folders)
